5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4150/executions/1800_2565.log
== TEST (2019-06-11 12:27:55) 
-- CODE:
m = array(eval(input("digite: ")))
p = array(eval(input("digite: ")))
c = int(input("carga horaria: "))

for i in range(size(m)):
	if m[i] >= 5 and (p[i]*100/c) >=75:
		x[0] = x[0] + 1
	elif m[i] < 5 and (p[i]*100/c) >= 75:
		x[1] = x[1] + 1
	elif m[i] >=5 and (p[i]*100/c) < 75:
		x[2] = x[2] + 1
	print(x)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    m = array(eval(input()))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 12:28:15) 
-- CODE:
from numpy import*

m = array(eval(input("digite: ")))
p = array(eval(input("digite: ")))
c = int(input("carga horaria: "))

for i in range(size(m)):
	if m[i] >= 5 and (p[i]*100/c) >=75:
		x[0] = x[0] + 1
	elif m[i] < 5 and (p[i]*100/c) >= 75:
		x[1] = x[1] + 1
	elif m[i] >=5 and (p[i]*100/c) < 75:
		x[2] = x[2] + 1
	print(x)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 12:29:26) 
-- CODE:
from numpy import*

m = array(eval(input("digite: ")))
p = array(eval(input("digite: ")))
c = int(input("carga horaria: "))
x = zeros (3, dtype = int)

for i in range(size(m)):
	if m[i] >= 5 and (p[i]*100/c) >=75:
		x[0] = x[0] + 1
	elif m[i] < 5 and (p[i]*100/c) >= 75:
		x[1] = x[1] + 1
	elif m[i] >=5 and (p[i]*100/c) < 75:
		x[2] = x[2] + 1
	print(x)
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 12:29:31) 
-- CODE:
from numpy import*

m = array(eval(input("digite: ")))
p = array(eval(input("digite: ")))
c = int(input("carga horaria: "))
x = zeros (3, dtype = int)

for i in range(size(m)):
	if m[i] >= 5 and (p[i]*100/c) >=75:
		x[0] = x[0] + 1
	elif m[i] < 5 and (p[i]*100/c) >= 75:
		x[1] = x[1] + 1
	elif m[i] >=5 and (p[i]*100/c) < 75:
		x[2] = x[2] + 1
	print(x)
		
		
-- EXECUTION TIME:
1.1171
-- TEST CASE 1:
---- input:
[6.2,7.3,7.0,7.5,8.9]
[75,76,74,73,72]
100
---- correct output:
[2 0 3]
---- user output:
[1 0 0]
[2 0 0]
[2 0 1]
[2 0 2]
[2 0 3]
-- TEST CASE 2:
---- input:
[7.4,7.6,7.5,7.2,7.2,7.3,7.8]
[60,80,55,58,61,70,79]
80
---- correct output:
[5 0 2]
---- user output:
[1 0 0]
[2 0 0]
[2 0 1]
[2 0 2]
[3 0 2]
[4 0 2]
[5 0 2]
-- TEST CASE 3:
---- input:
[8.2,6.9,7.0,6.5,7.4,8.5,7.6,6.9,4.5,5.5]
[90,40,70,35,100,110,85,99,100,110]
120
---- correct output:
[5 1 4]
---- user output:
[1 0 0]
[1 0 1]
[1 0 2]
[1 0 3]
[2 0 3]
[3 0 3]
[3 0 4]
[4 0 4]
[4 1 4]
[5 1 4]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 12:29:38) 
-- CODE:
from numpy import*

m = array(eval(input("digite: ")))
p = array(eval(input("digite: ")))
c = int(input("carga horaria: "))
x = zeros (3, dtype = int)

for i in range(size(m)):
	if m[i] >= 5 and (p[i]*100/c) >=75:
		x[0] = x[0] + 1
	elif m[i] < 5 and (p[i]*100/c) >= 75:
		x[1] = x[1] + 1
	elif m[i] >=5 and (p[i]*100/c) < 75:
		x[2] = x[2] + 1
print(x)
		
		
-- EXECUTION TIME:
1.08988
-- TEST CASE 1:
---- input:
[6.2,7.3,7.0,7.5,8.9]
[75,76,74,73,72]
100
---- correct output:
[2 0 3]
---- user output:
[2 0 3]
-- TEST CASE 2:
---- input:
[7.4,7.6,7.5,7.2,7.2,7.3,7.8]
[60,80,55,58,61,70,79]
80
---- correct output:
[5 0 2]
---- user output:
[5 0 2]
-- TEST CASE 3:
---- input:
[8.2,6.9,7.0,6.5,7.4,8.5,7.6,6.9,4.5,5.5]
[90,40,70,35,100,110,85,99,100,110]
120
---- correct output:
[5 1 4]
---- user output:
digite: digite: carga horaria: [5 1 4]
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 12:30:00) 
-- CODE:
from numpy import*

m = array(eval(input("digite: ")))
p = array(eval(input("digite: ")))
c = int(input("carga horaria: "))

x = zeros (3, dtype = int)

for i in range(size(m)):
	if m[i] >= 5 and (p[i]*100/c) >= 75:
		x[0] = x[0] + 1
	elif m[i] < 5 and (p[i]*100/c) >= 75:
		x[1] = x[1] + 1
	elif m[i] >=5 and (p[i]*100/c) < 75:
		x[2] = x[2] + 1
print(x)
		
		
-- EXECUTION TIME:
1.20894
-- TEST CASE 1:
---- input:
[6.2,7.3,7.0,7.5,8.9]
[75,76,74,73,72]
100
---- correct output:
[2 0 3]
---- user output:
[2 0 3]
-- TEST CASE 2:
---- input:
[7.4,7.6,7.5,7.2,7.2,7.3,7.8]
[60,80,55,58,61,70,79]
80
---- correct output:
[5 0 2]
---- user output:
[5 0 2]
-- TEST CASE 3:
---- input:
[8.2,6.9,7.0,6.5,7.4,8.5,7.6,6.9,4.5,5.5]
[90,40,70,35,100,110,85,99,100,110]
120
---- correct output:
[5 1 4]
---- user output:
[5 1 4]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
